# cnauta

./: .gitattributes  .gitignore  README.md  config.cfg  main.py  pyproject.toml
config/innosetup/: cnauta-win64.iss
doc/: python.md  windows.md
multiplatform/python/: README.md  config.cfg
multiplatform/python/nauta-portal.0.2.0-win64/: config.cfg
win/cnauta/: .gitignore  Lib.cs  Program.cs  appconfig.json  appconfig.sample.json  cnauta.csproj  cnauta.sln  packages.config
win/cnauta/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
win/cnauta/controller/: CConfig.cs  CMain.cs  CMainMenu.cs
win/cnauta/controller/globalHandlers/: GhKeyHandler.cs
win/cnauta/model/: MConfigMgr.cs  MHttpCnx.cs  MNumber.cs
win/cnauta/model/extension/: MHttpCnxExt.cs
win/cnauta/model/schema/: SchConfigData.cs  SchCredential.cs
win/cnauta/view/: FViewMain.Designer.cs  FViewMain.cs  VFormConfigs.Designer.cs  VFormConfigs.cs  VFormConfigs.resx  VMainMenu.cs  VMainMenuCxt.cs
win/cnauta/view/ifaces/: IMainView.cs  IViewConfig.cs  IViewMainMenuCtx.cs
