[tool.poetry]
name = "nauta portal"
version = "0.1.0"
description = "Access to the Nauta Portal"
authors = ["kmilo <kmilo.denis.glez@yandex.com>, dany <danif-mena@yandex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
